--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,6 +3,7 @@
   "version": "yarn@3.0.2",
   "private": true,
   "dependencies": {
+    "@chess-game/shared": "1.0.0",
     "@craco/craco": "7.0.0-alpha.3",
     "@fortawesome/fontawesome-pro": "^6.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
