Copied over shared and server files from other project and stripped down to essentials
Copied over all files from another project I was working on for shared & server workspaces.  Stripped down the contents of these files so that the only project specific code that remains is that for user authentication.  Refactored the rest of the code to work within the new workspace

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -6,6 +6,9 @@
     "source": "src/index.ts",
     "module": "./src/index.ts",
     "private": true,
+    "scripts": {
+        "config:update": "ts-node ./scripts/fileWatcher.ts"
+    },
     "dependencies": {
         "axios": "^0.26.0",
         "dotenv": "^16.0.0"
